--- a/Firebase Test/index.html
+++ b/Firebase Test/index.html
@@ -5,11 +5,19 @@
 
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+      <script src="https://cdn.tailwindcss.com"></script>
+      <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.1/dist/flowbite.min.css" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+
   </body>
 </html>
