--- a/Firebase Test/index.html
+++ b/Firebase Test/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="./src/assets/LogoKanten.png">
       <script src="https://cdn.tailwindcss.com"></script>
 
 
